// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcceptedModal should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ant-scrolling-effect"
    style="width: calc(100% - 0px); overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
    </div>
    <div>
      <div
        class="rc-dialog-root"
      >
        <div
          class="rc-dialog-mask"
        />
        <div
          aria-labelledby="rcDialogTitle0"
          class="rc-dialog-wrap m140lwlu-modal-centered"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="rc-dialog m36ncwu-modal-container"
            role="document"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="rc-dialog-content"
            >
              <div
                class="rc-dialog-header"
              >
                <div
                  class="rc-dialog-title"
                  id="rcDialogTitle0"
                >
                  <h4
                    class="modal-card-title is-4 pt-2 pb-2"
                  >
                    Reapit Foundations Invitation
                  </h4>
                </div>
              </div>
              <div
                class="rc-dialog-body"
              >
                <div
                  class="content"
                  data-test=""
                >
                  <p>
                    You have been invited to join the '
                    ' organisation on Reapit Foundations.
                  </p>
                  <p>
                    Before confirming your account, please ensure your details are correct below.
                  </p>
                </div>
                <form
                  action="#"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="control "
                    >
                      <label
                        class="label inline-block required-label"
                        for="name"
                      >
                        Name
                      </label>
                      <input
                        class="input is-primary"
                        data-test=""
                        id="name"
                        name="name"
                        placeholder=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="field"
                  >
                    <div
                      class="control "
                    >
                      <label
                        class="label inline-block required-label"
                        for="jobTitle"
                      >
                        Job Title
                      </label>
                      <input
                        class="input is-primary"
                        data-test=""
                        id="jobTitle"
                        name="jobTitle"
                        placeholder=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </form>
                <div
                  class="content"
                  data-test=""
                >
                  <p>
                    <strong>
                      Important: 
                    </strong>
                    If you already have an account and confirm this invitation, any data on your existing account will no longer be available.
                  </p>
                </div>
              </div>
              <div
                class="rc-dialog-footer"
              >
                <button
                  class="button   is-danger mr-2"
                  data-test=""
                  type="button"
                >
                  Decline
                </button>
                <button
                  class="button   is-primary "
                  data-test=""
                  type="submit"
                >
                  Confirm
                </button>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ModalFooter should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
    style=""
  >
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <button
        class="button   is-danger mr-2"
        data-test=""
        type="button"
      >
        Decline
      </button>
      <button
        class="button   is-primary "
        data-test=""
        type="submit"
      >
        Confirm
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <button
      class="button   is-danger mr-2"
      data-test=""
      type="button"
    >
      Decline
    </button>
    <button
      class="button   is-primary "
      data-test=""
      type="submit"
    >
      Confirm
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
